Add notification endpoints
