# generated/Endpoint/CreateWebhook.php
@@ -1,0 +1,73 @@
+<?php
+
+namespace HbsResearch\Tilkee\API\Endpoint;
+
+class CreateWebhook extends \Jane\OpenApiRuntime\Client\BaseEndpoint implements \Jane\OpenApiRuntime\Client\Psr7Endpoint
+{
+    /**
+     * Create a webhook.
+     *
+     * @param array $headerParameters {
+     *
+     *     @var string $x-tilk-ref Identification de l'outil, peux contenir un numéro de version par ex. tool-2.1
+     * }
+     */
+    public function __construct(\HbsResearch\Tilkee\API\Model\NotificationsPostBody $requestBody, array $headerParameters = [])
+    {
+        $this->body = $requestBody;
+        $this->headerParameters = $headerParameters;
+    }
+
+    use \Jane\OpenApiRuntime\Client\Psr7EndpointTrait;
+
+    public function getMethod(): string
+    {
+        return 'POST';
+    }
+
+    public function getUri(): string
+    {
+        return '/notifications';
+    }
+
+    public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null): array
+    {
+        if ($this->body instanceof \HbsResearch\Tilkee\API\Model\NotificationsPostBody) {
+            return [['Content-Type' => ['application/json']], $serializer->serialize($this->body, 'json')];
+        }
+
+        return [[], null];
+    }
+
+    protected function getHeadersOptionsResolver(): \Symfony\Component\OptionsResolver\OptionsResolver
+    {
+        $optionsResolver = parent::getHeadersOptionsResolver();
+        $optionsResolver->setDefined(['x-tilk-ref']);
+        $optionsResolver->setRequired([]);
+        $optionsResolver->setDefaults([]);
+        $optionsResolver->setAllowedTypes('x-tilk-ref', ['string']);
+
+        return $optionsResolver;
+    }
+
+    /**
+     * {@inheritdoc}
+     *
+     * @throws \HbsResearch\Tilkee\API\Exception\CreateWebhookBadRequestException
+     * @throws \HbsResearch\Tilkee\API\Exception\CreateWebhookUnauthorizedException
+     *
+     * @return null
+     */
+    protected function transformResponseBody(string $body, int $status, \Symfony\Component\Serializer\SerializerInterface $serializer, ?string $contentType = null)
+    {
+        if (200 === $status) {
+            return null;
+        }
+        if (400 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\CreateWebhookBadRequestException();
+        }
+        if (401 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\CreateWebhookUnauthorizedException();
+        }
+    }
+}
