# generated/Endpoint/DeleteNotification.php
@@ -1,0 +1,70 @@
+<?php
+
+namespace HbsResearch\Tilkee\API\Endpoint;
+
+class DeleteNotification extends \Jane\OpenApiRuntime\Client\BaseEndpoint implements \Jane\OpenApiRuntime\Client\Psr7Endpoint
+{
+    protected $notificationId;
+
+    /**
+     * @param int   $notificationId   ID of notification
+     * @param array $headerParameters {
+     *
+     *     @var string $x-tilk-ref Identification de l'outil, peux contenir un numéro de version par ex. tool-2.1
+     * }
+     */
+    public function __construct(int $notificationId, array $headerParameters = [])
+    {
+        $this->notificationId = $notificationId;
+        $this->headerParameters = $headerParameters;
+    }
+
+    use \Jane\OpenApiRuntime\Client\Psr7EndpointTrait;
+
+    public function getMethod(): string
+    {
+        return 'DELETE';
+    }
+
+    public function getUri(): string
+    {
+        return str_replace(['{notificationId}'], [$this->notificationId], '/notifications/{notificationId}');
+    }
+
+    public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null): array
+    {
+        return [[], null];
+    }
+
+    protected function getHeadersOptionsResolver(): \Symfony\Component\OptionsResolver\OptionsResolver
+    {
+        $optionsResolver = parent::getHeadersOptionsResolver();
+        $optionsResolver->setDefined(['x-tilk-ref']);
+        $optionsResolver->setRequired([]);
+        $optionsResolver->setDefaults([]);
+        $optionsResolver->setAllowedTypes('x-tilk-ref', ['string']);
+
+        return $optionsResolver;
+    }
+
+    /**
+     * {@inheritdoc}
+     *
+     * @throws \HbsResearch\Tilkee\API\Exception\DeleteNotificationBadRequestException
+     * @throws \HbsResearch\Tilkee\API\Exception\DeleteNotificationUnauthorizedException
+     *
+     * @return null
+     */
+    protected function transformResponseBody(string $body, int $status, \Symfony\Component\Serializer\SerializerInterface $serializer, ?string $contentType = null)
+    {
+        if (200 === $status) {
+            return null;
+        }
+        if (400 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\DeleteNotificationBadRequestException();
+        }
+        if (401 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\DeleteNotificationUnauthorizedException();
+        }
+    }
+}
