# generated/Endpoint/ListNotifications.php
@@ -1,0 +1,71 @@
+<?php
+
+namespace HbsResearch\Tilkee\API\Endpoint;
+
+class ListNotifications extends \Jane\OpenApiRuntime\Client\BaseEndpoint implements \Jane\OpenApiRuntime\Client\Psr7Endpoint
+{
+    /**
+     * @param array $headerParameters {
+     *
+     *     @var string $x-tilk-ref Identification de l'outil, peux contenir un numéro de version par ex. tool-2.1
+     * }
+     */
+    public function __construct(array $headerParameters = [])
+    {
+        $this->headerParameters = $headerParameters;
+    }
+
+    use \Jane\OpenApiRuntime\Client\Psr7EndpointTrait;
+
+    public function getMethod(): string
+    {
+        return 'GET';
+    }
+
+    public function getUri(): string
+    {
+        return '/notifications';
+    }
+
+    public function getBody(\Symfony\Component\Serializer\SerializerInterface $serializer, $streamFactory = null): array
+    {
+        return [[], null];
+    }
+
+    public function getExtraHeaders(): array
+    {
+        return ['Accept' => ['application/json']];
+    }
+
+    protected function getHeadersOptionsResolver(): \Symfony\Component\OptionsResolver\OptionsResolver
+    {
+        $optionsResolver = parent::getHeadersOptionsResolver();
+        $optionsResolver->setDefined(['x-tilk-ref']);
+        $optionsResolver->setRequired([]);
+        $optionsResolver->setDefaults([]);
+        $optionsResolver->setAllowedTypes('x-tilk-ref', ['string']);
+
+        return $optionsResolver;
+    }
+
+    /**
+     * {@inheritdoc}
+     *
+     * @throws \HbsResearch\Tilkee\API\Exception\ListNotificationsBadRequestException
+     * @throws \HbsResearch\Tilkee\API\Exception\ListNotificationsUnauthorizedException
+     *
+     * @return \HbsResearch\Tilkee\API\Model\NotificationsGetResponse200|null
+     */
+    protected function transformResponseBody(string $body, int $status, \Symfony\Component\Serializer\SerializerInterface $serializer, ?string $contentType = null)
+    {
+        if (200 === $status && false !== mb_strpos($contentType, 'application/json')) {
+            return $serializer->deserialize($body, 'HbsResearch\\Tilkee\\API\\Model\\NotificationsGetResponse200', 'json');
+        }
+        if (400 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\ListNotificationsBadRequestException();
+        }
+        if (401 === $status) {
+            throw new \HbsResearch\Tilkee\API\Exception\ListNotificationsUnauthorizedException();
+        }
+    }
+}
